fixed cors issue and other bugs
